--- a/package.json
+++ b/package.json
@@ -19,7 +19,16 @@
   "dependencies": {
     "import-jsx": "^4.0.0",
     "ink": "^3.0.8",
+    "ink-select-input": "^4.2.0",
     "node-banner": "^1.4.0",
+    "open": "^7.3.1",
     "react": "^17.0.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/register": "^7.12.10"
   }
 }
