--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "aadarsh-cli",
-	"version": "1.1.0",
+	"version": "1.2.3",
 	"description": "Aadarsh CLI",
 	"license": "MIT",
-	"bin": "cli.js",
+	"bin": "index.js",
 	"author": "Aadarsh",
 	"engines": {
 		"node": ">=10"
@@ -20,7 +20,7 @@
 		"test": "xo && ava"
 	},
 	"files": [
-		"cli.js",
+		"index.js",
 		"ui.js"
 	],
 	"dependencies": {
